# otelme

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  otelme.py  pyproject.toml  test_otelme.py
